# kill-the-enemies

./: .gitignore  CMakeLists.txt  README.md  changelog.md  nvims  todo.md
src/: Config.hpp  Game.cpp  Game.hpp  main.cpp  math.hpp  utils.hpp
src/components/: AI.hpp  Acceleration.hpp  Audio.hpp  Enemy.hpp  Friction.hpp  Health.hpp  Hitbox.hpp  Immovable.hpp  Movable.hpp  Player.hpp  Position.hpp  Projectile.hpp  Sprite.hpp  Surface.hpp  Velocity.hpp  Weapon.hpp  components.hpp
src/gui/: Button.hpp
src/helpers/: entityhelper.hpp  helpers.hpp  jsonhelper.hpp
src/systems/: AISystem.cpp  AISystem.hpp  AudioSystem.cpp  AudioSystem.hpp  CameraSystem.cpp  CameraSystem.hpp  CollisionXSystem.cpp  CollisionXSystem.hpp  CollisionYSystem.cpp  CollisionYSystem.hpp  DebugMenuSystem.cpp  DebugMenuSystem.hpp  DebugRenderingSystem.hpp  DestroySystem.cpp  DestroySystem.hpp  HealthRenderingSystem.cpp  HealthRenderingSystem.hpp  HealthSystem.cpp  HealthSystem.hpp  HitboxRenderingSystem.cpp  HitboxRenderingSystem.hpp  MovementXSystem.cpp  MovementXSystem.hpp  MovementYSystem.cpp  MovementYSystem.hpp  PlayerMovementSystem.cpp  PlayerMovementSystem.hpp  RenderingSystem.cpp  RenderingSystem.hpp  SpriteRenderingSystem.cpp  SpriteRenderingSystem.hpp  System.cpp  System.hpp  WeaponRenderingSystem.cpp  WeaponRenderingSystem.hpp  WeaponSystem.cpp  WeaponSystem.hpp  systems.hpp
